<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Quiz"
            android:textColor="@color/green"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/question_1_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="24dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:padding="16dp">

                <TextView
                    android:id="@+id/question_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question_1"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RadioGroup
                    android:id="@+id/question_1_radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/question_1"
                    android:onClick="onRadioSelect">

                    <RadioButton
                        android:id="@+id/question_1_option_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question_1_option_1"
                        android:textColor="@color/black" />

                    <RadioButton
                        android:id="@+id/question_1_option_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question_1_option_2"
                        android:textColor="@color/black" />

                    <RadioButton
                        android:id="@+id/question_1_option_3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question_1_option_3"
                        android:textColor="@color/black" />

                    <RadioButton
                        android:id="@+id/question_1_option_4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question_1_option_4"
                        android:textColor="@color/black" />
                </RadioGroup>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/question_2_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/question_1_card">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:padding="16dp">

                <TextView
                    android:id="@+id/question_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question_2"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <CheckBox
                    android:id="@+id/question_2_option_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/question_2_option_1"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/question_2"
                    android:onClick="onQuestionTwoOptionSelect"/>

                <CheckBox
                    android:id="@+id/question_2_option_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/question_2_option_2"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/question_2_option_1"
                    android:onClick="onQuestionTwoOptionSelect"/>

                <CheckBox
                    android:id="@+id/question_2_option_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/question_2_option_3"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/question_2_option_2"
                    android:onClick="onQuestionTwoOptionSelect"/>

                <CheckBox
                    android:id="@+id/question_2_option_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/question_2_option_4"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/question_2_option_3"
                    android:onClick="onQuestionTwoOptionSelect"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/button_filled"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onSubmit"
            android:text="@string/submit_button_label"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/question_2_card" />
        <Button
            android:id="@+id/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/button_outlined"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onReset"
            android:text="@string/reset_button_label"
            android:textColor="@color/orange"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/submit_button"
            app:layout_constraintTop_toBottomOf="@+id/question_2_card" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>